--- a/CoreDataProject/Base.lproj/Main.storyboard
+++ b/CoreDataProject/Base.lproj/Main.storyboard
@@ -106,9 +106,9 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <view key="tableFooterView" contentMode="scaleToFill" id="PU7-Oj-Eao">
-                                    <rect key="frame" x="0.0" y="72" width="375" height="128"/>
+                                    <rect key="frame" x="0.0" y="72" width="375" height="21"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                    <color key="backgroundColor" red="0.91449981043922091" green="1" blue="0.16026889955235391" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <color key="backgroundColor" red="0.99007930420714174" green="1" blue="0.96090644375552381" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </view>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="celula" id="U39-si-kMO">
@@ -117,6 +117,19 @@
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="U39-si-kMO" id="J8q-IE-QCz">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yHR-7c-KFR">
+                                                    <rect key="frame" x="268" y="7" width="107" height="30"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <color key="backgroundColor" red="0.94655952249999997" green="1" blue="0.56623722009999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <state key="normal" title="Take Picture">
+                                                        <color key="titleColor" red="0.11078428077784558" green="0.38437095207253891" blue="0.028399371829774183" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    </state>
+                                                    <connections>
+                                                        <action selector="takePicture:" destination="GHA-R4-l0D" eventType="touchUpInside" id="ZI2-Xf-DjZ"/>
+                                                    </connections>
+                                                </button>
+                                            </subviews>
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                 </prototypes>
@@ -128,6 +141,9 @@
                         </subviews>
                         <color key="backgroundColor" red="0.99887377023696899" green="0.67858892679214478" blue="0.5614047646522522" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
+                    <connections>
+                        <outlet property="tableView" destination="mHn-Xw-ph8" id="d31-Q9-ZHR"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2ie-JP-sAC" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
